<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="479dp"
        android:background="@drawable/background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button3"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="4dp"
                android:translationY="6dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="13dp"
                android:translationY="6dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="22dp"
                android:translationY="6dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="30dp"
                android:translationY="6dp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="40dp"
                android:translationY="6dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="55dp"
                android:translationY="-15dp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-10dp"
                android:translationY="17dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button8"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="5dp"
                android:translationY="-2dp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="13dp"
                android:translationY="-1dp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="22dp"
                android:translationY="-1dp" />

            <Button
                android:id="@+id/button11"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="30dp"
                android:translationY="-1dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="40dp"
                android:translationY="-1dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="55dp"
                android:translationY="-22dp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-10dp"
                android:translationY="11dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button13"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="5dp"
                android:translationY="-2dp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="13dp"
                android:translationY="-2dp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="22dp"
                android:translationY="-2dp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="30dp"
                android:translationY="-2dp" />

            <Button
                android:id="@+id/button17"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="40dp"
                android:translationY="-2dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="55dp"
                android:translationY="-23dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-10dp"
                android:translationY="9dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button18"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="5dp"
                android:translationY="-5dp" />

            <Button
                android:id="@+id/button19"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="13dp"
                android:translationY="-5dp" />

            <Button
                android:id="@+id/button20"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="22dp"
                android:translationY="-5dp" />

            <Button
                android:id="@+id/button21"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="30dp"
                android:translationY="-5dp" />

            <Button
                android:id="@+id/button22"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="40dp"
                android:translationY="-5dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="55dp"
                android:translationY="-26dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-10dp"
                android:translationY="6dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button23"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="5dp"
                android:translationY="-8dp" />

            <Button
                android:id="@+id/button24"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="13dp"
                android:translationY="-8dp" />

            <Button
                android:id="@+id/button25"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="22dp"
                android:translationY="-8dp" />

            <Button
                android:id="@+id/button26"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="30dp"
                android:translationY="-8dp" />

            <Button
                android:id="@+id/button27"
                android:layout_width="60dp"
                android:layout_height="75dp"
                android:foreground="@drawable/blank"
                android:translationX="40dp"
                android:translationY="-8dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="55dp"
                android:translationY="-29dp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-10dp"
                android:translationY="4dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="10dp"
                android:translationY="5dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="-4dp"
                android:translationY="5dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="-15dp"
                android:translationY="5dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="-30dp"
                android:translationY="5dp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_00"
                android:textStyle="bold"
                android:translationX="-44dp"
                android:translationY="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-25dp"
                android:translationY="0dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-40dp" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-50dp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-65dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/voltorb_0"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                android:translationX="-80dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFC5C5"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="82dp"
            android:background="#29A36B"
            android:text="@string/score"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#29A26B"
            android:text="0"
            android:textAlignment="textStart"
            android:textSize="34sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#29A36B"
        android:orientation="horizontal">

        <Button
            android:id="@+id/quit_button"
            android:layout_width="212dp"
            android:layout_height="119dp"
            android:foregroundTint="#E9714F"
            android:text="@string/quit" />

        <Button
            android:id="@+id/restart_button"
            android:layout_height="119dp"
            android:layout_weight="1"
            android:text="@string/restart" />
    </LinearLayout>

</LinearLayout>